// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PxeDetails renders form with pxe servers 1`] = `
<Form
  bsClass="form"
  componentClass="form"
  horizontal={true}
  inline={false}
>
  <FormSpy
    onChange={[Function]}
  />
  <Grid
    bsClass="container"
    componentClass="div"
    fluid={true}
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        componentClass="div"
        xs={12}
      >
        <h2>
          _Number of servers to be provisioned: 3_
        </h2>
      </Col>
    </Row>
    <hr />
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        componentClass="div"
        xs={12}
      >
        <Field
          component={[Function]}
          format={[Function]}
          inputColumnSize={8}
          label="_PXE Server_"
          labelColumnSize={3}
          name="pxeServer"
          options={
            Array [
              Object {
                "label": "PXE1",
                "value": "pxe1",
              },
            ]
          }
          parse={[Function]}
          placeholder="_Select a PXE Server_"
          searchable={true}
          validate={[Function]}
          validateOnMount={false}
        />
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        xs={12}
      >
        <Field
          component={[Function]}
          disabled={true}
          format={[Function]}
          inputColumnSize={8}
          label="_PXE Image_"
          labelColumnSize={3}
          name="pxeImage"
          options={Array []}
          parse={[Function]}
          placeholder="_Select a PXE Image_"
          searchable={true}
          validate={[Function]}
          validateOnMount={false}
        />
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        xs={12}
      >
        <Field
          component={[Function]}
          disabled={true}
          format={[Function]}
          inputColumnSize={8}
          label="_Customization Template_"
          labelColumnSize={3}
          name="customizationTemplate"
          options={Array []}
          parse={[Function]}
          placeholder="_Select Customization Template_"
          searchable={true}
          validate={[Function]}
          validateOnMount={false}
        />
      </Col>
      <hr />
    </Row>
  </Grid>
</Form>
`;

exports[`PxeDetails renders form with pxe servers and pxe images 1`] = `
<Form
  bsClass="form"
  componentClass="form"
  horizontal={true}
  inline={false}
>
  <FormSpy
    onChange={[Function]}
  />
  <Grid
    bsClass="container"
    componentClass="div"
    fluid={true}
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        componentClass="div"
        xs={12}
      >
        <h2>
          _Number of servers to be provisioned: 3_
        </h2>
      </Col>
    </Row>
    <hr />
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        componentClass="div"
        xs={12}
      >
        <Field
          component={[Function]}
          format={[Function]}
          inputColumnSize={8}
          label="_PXE Server_"
          labelColumnSize={3}
          name="pxeServer"
          options={
            Array [
              Object {
                "label": "PXE1",
                "value": "pxe1",
              },
            ]
          }
          parse={[Function]}
          placeholder="_Select a PXE Server_"
          searchable={true}
          validate={[Function]}
          validateOnMount={false}
        />
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        xs={12}
      >
        <Field
          component={[Function]}
          disabled={false}
          format={[Function]}
          inputColumnSize={8}
          label="_PXE Image_"
          labelColumnSize={3}
          name="pxeImage"
          options={
            Array [
              Object {
                "label": "IMG1",
                "value": "img1",
              },
            ]
          }
          parse={[Function]}
          placeholder="_Select a PXE Image_"
          searchable={true}
          validate={[Function]}
          validateOnMount={false}
        />
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        xs={12}
      >
        <Field
          component={[Function]}
          disabled={true}
          format={[Function]}
          inputColumnSize={8}
          label="_Customization Template_"
          labelColumnSize={3}
          name="customizationTemplate"
          options={Array []}
          parse={[Function]}
          placeholder="_Select Customization Template_"
          searchable={true}
          validate={[Function]}
          validateOnMount={false}
        />
      </Col>
      <hr />
    </Row>
  </Grid>
</Form>
`;

exports[`PxeDetails renders form with pxe servers and pxe images and templates 1`] = `
<Form
  bsClass="form"
  componentClass="form"
  horizontal={true}
  inline={false}
>
  <FormSpy
    onChange={[Function]}
  />
  <Grid
    bsClass="container"
    componentClass="div"
    fluid={true}
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        componentClass="div"
        xs={12}
      >
        <h2>
          _Number of servers to be provisioned: 3_
        </h2>
      </Col>
    </Row>
    <hr />
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        componentClass="div"
        xs={12}
      >
        <Field
          component={[Function]}
          format={[Function]}
          inputColumnSize={8}
          label="_PXE Server_"
          labelColumnSize={3}
          name="pxeServer"
          options={
            Array [
              Object {
                "label": "PXE1",
                "value": "pxe1",
              },
            ]
          }
          parse={[Function]}
          placeholder="_Select a PXE Server_"
          searchable={true}
          validate={[Function]}
          validateOnMount={false}
        />
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        xs={12}
      >
        <Field
          component={[Function]}
          disabled={false}
          format={[Function]}
          inputColumnSize={8}
          label="_PXE Image_"
          labelColumnSize={3}
          name="pxeImage"
          options={
            Array [
              Object {
                "label": "IMG1",
                "value": "img1",
              },
            ]
          }
          parse={[Function]}
          placeholder="_Select a PXE Image_"
          searchable={true}
          validate={[Function]}
          validateOnMount={false}
        />
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        xs={12}
      >
        <Field
          component={[Function]}
          disabled={false}
          format={[Function]}
          inputColumnSize={8}
          label="_Customization Template_"
          labelColumnSize={3}
          name="customizationTemplate"
          options={
            Array [
              Object {
                "label": "TEMPL1",
                "value": "templ1",
              },
            ]
          }
          parse={[Function]}
          placeholder="_Select Customization Template_"
          searchable={true}
          validate={[Function]}
          validateOnMount={false}
        />
      </Col>
      <hr />
    </Row>
  </Grid>
</Form>
`;

exports[`PxeDetails renders form without pxe servers 1`] = `
<Form
  bsClass="form"
  componentClass="form"
  horizontal={true}
  inline={false}
>
  <FormSpy
    onChange={[Function]}
  />
  <Grid
    bsClass="container"
    componentClass="div"
    fluid={true}
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        componentClass="div"
        xs={12}
      >
        <h2>
          _Number of servers to be provisioned: 3_
        </h2>
      </Col>
    </Row>
    <hr />
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        componentClass="div"
        xs={12}
      >
        <Field
          component={[Function]}
          format={[Function]}
          inputColumnSize={8}
          label="_PXE Server_"
          labelColumnSize={3}
          name="pxeServer"
          options={Array []}
          parse={[Function]}
          placeholder="_Select a PXE Server_"
          searchable={true}
          validate={[Function]}
          validateOnMount={false}
        />
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        xs={12}
      >
        <Field
          component={[Function]}
          disabled={true}
          format={[Function]}
          inputColumnSize={8}
          label="_PXE Image_"
          labelColumnSize={3}
          name="pxeImage"
          options={Array []}
          parse={[Function]}
          placeholder="_Select a PXE Image_"
          searchable={true}
          validate={[Function]}
          validateOnMount={false}
        />
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        xs={12}
      >
        <Field
          component={[Function]}
          disabled={true}
          format={[Function]}
          inputColumnSize={8}
          label="_Customization Template_"
          labelColumnSize={3}
          name="customizationTemplate"
          options={Array []}
          parse={[Function]}
          placeholder="_Select Customization Template_"
          searchable={true}
          validate={[Function]}
          validateOnMount={false}
        />
      </Col>
      <hr />
    </Row>
  </Grid>
</Form>
`;

exports[`PxeDetails renders spinner 1`] = `
<div
  className="spinner spinner-lg"
/>
`;
